--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="borderColor">#000000</color>
-    <color name="focus_lvl_1">#FFAC6F</color>
-    <color name="focus_lvl_2">#FD8D3A</color>
+    <color name="focus_lvl_1">#EFE269</color>
+    <color name="focus_lvl_2">#F36335</color>
     <color name="correct">#55E608</color>
 
 </resources>
