--- a/app/src/main/res/layout/activity_crossword.xml
+++ b/app/src/main/res/layout/activity_crossword.xml
@@ -15,11 +15,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingTop="20dp"
         android:columnCount="11"
         android:rowCount="11"
         android:layout_weight="1.5">
 
     </GridLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider" />
 
     <TextView
         android:id="@+id/pista"
@@ -27,9 +34,14 @@
         android:layout_height="wrap_content"
         android:text="hint"
         android:gravity="center"
+        android:textSize="20dp"
         android:background="@color/colorAccent"/>
 
-
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="?android:attr/listDivider" />
 <!--    <GridLayout-->
 <!--        android:id="@+id/keyboard"-->
 <!--        android:layout_width="wrap_content"-->
