--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="texto_general" >@color/texto_tema1 </item>
+        <item name="colorprueba" >@color/colorAccent</item>
+        <item name="colorControlActivated">#0728FA</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#D80000</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#3C7800</item>
     </style>
 
     <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -20,6 +28,24 @@
     </style>
 
     <style name="CustomTheme2" parent="Theme.AppCompat.Light.NoActionBar">
+    </style>
+
+    <style name="fontStyle">
+        <item name="android:textStyle">italic</item>
+        <item name="android:fontFamily">@font/opendyslexic_regular</item>
+        <item name="android:padding">2dip</item>
+    </style>
+
+    <style name="SCBSwitch" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorprueba" >@color/colorPrimaryDark</item>
+        <item name="colorControlActivated">?attr/colorprueba</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#D80000</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#3C7800</item>
     </style>
 
 </resources>
