--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -25,7 +25,7 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/divider"
+        android:id="@+id/divider1"
         android:layout_width="match_parent"
         android:layout_height="7dp"
         android:background="?android:attr/listDivider" />
@@ -78,7 +78,67 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textOn="Activado"
+            android:textOff="Desactivado"
+            android:theme="@style/SCBSwitch"
             />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="?android:attr/listDivider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:paddingVertical="25dp"
+        android:paddingHorizontal="25dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tamaño de Letra"
+            android:layout_weight="0.6"/>
+
+        <RadioGroup
+            android:id="@+id/radioGroupFontSize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
+            <RadioButton
+                android:id="@+id/radioSmall"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="  Pequeña"
+                android:textSize="10dp" />
+
+            <RadioButton
+                android:id="@+id/radioMedium"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:checked="false"
+                android:text=" Mediana"
+                android:textSize="13dp" />
+
+            <RadioButton
+                android:id="@+id/radioLarge"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:checked="false"
+                android:text=" Grande"
+                android:textSize="20dp" />
+
+        </RadioGroup>
+
 
     </LinearLayout>
 
