--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".OptionsActivity">
+
+
+    <data>
+        <variable
+            name="customFont"
+            type="com.example.myapplication2.FontOptions"/>
+    </data>
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".OptionsActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +29,11 @@
            android:id="@+id/returnOptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="Regresar"/>
+           android:textSize="@{customFont.BUTTONdp}"
+           android:text="Regresar"
+           android:typeface="@{customFont.FONT_STYLE}"/>
+<!--           android:fontFamily="@{customFont.FONT_STYLE}"-->
+<!--            />-->
 
     </LinearLayout>
 
@@ -38,15 +51,12 @@
         android:paddingHorizontal="25dp"
         android:weightSum="1">
 
-
         <TextView
             android:id="@+id/colorMenu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Camiar Colores"
             android:textColor="?attr/texto_general"/>
-<!--            android:textColor="?attr/text_color"-->
-
 
     </LinearLayout>
 
@@ -138,8 +148,56 @@
                 android:textSize="20dp" />
 
         </RadioGroup>
-
-
     </LinearLayout>
 
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="?android:attr/listDivider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:paddingVertical="25dp"
+        android:paddingHorizontal="25dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fuente de Letra"
+            android:layout_weight="0.6"/>
+
+        <RadioGroup
+            android:id="@+id/radioGroupFontStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
+            <RadioButton
+                android:id="@+id/radioSerif"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:checked="false"
+                android:fontFamily="serif"
+                android:text="Fuente Tipo 1"
+                android:textSize="20dp" />
+
+            <RadioButton
+                android:id="@+id/radioDyslexic"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:checked="false"
+                android:fontFamily="@font/opendyslexic_regular"
+                android:text="Fuente Tipo 2"
+                android:textSize="20dp" />
+
+        </RadioGroup>
+    </LinearLayout>
 </LinearLayout>
+
+</layout>
